[package]
name = "proxy_page"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/zys864/proxy_page.git"
description = "A simple proxy page generator"
license = "Apache-2.0 OR MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"
anyhow = "1.0"
bytes = "1"
http-body-util = "0.1.3"
pin-project-lite = "0.2.16"
http = "1.3.1"
